@@ -3,8 +3,8 @@
 
 'asasm' started as a 'simple assembler' and was written by Niklas Röjemo under
 the name 'as' of !AS in its Desktop version.  A non desktop version was created
-for an Unix port by Andy Duplain and used in that form as backend assembler in the
-GCC/GNAT Ada RISC OS ports.
+for an Unix port by Andy Duplain and used in that form as backend assembler in
+the GCC/GNAT Ada RISC OS ports.
 
 Over time missing features like macro support were added and the emulation of
 Acorn objasm's behavior was improved.
@@ -13,20 +13,31 @@ In 2005 the 'asasm' ('as') license changed to GPL v2 after kind permission of
 Niklas Röjemo.
 
 Currently 'asasm'/'as' is part of GCCSDK project (http://gccsdk.riscos.info/)
-and its development continues there. After David Marston contribution, ELF output
-is now possible allowing objasm compatible assembler files to be used by GCCSDK 4
-which is purely ELF and no longer AOF based like GCCSDK 3.
+and its development continues there. After David Marston contribution, ELF
+output is now possible allowing objasm compatible assembler files to be used
+by GCCSDK 4 which is purely ELF and no longer AOF based like GCCSDK 3.
 
-Over time there were various contributors (most probably this list is not complete):
+Over time there were various contributors (most probably this list is not
+complete):
 
   - Niklas Röjemo: main author.
   - Andy Duplain: Unix port.
-  - Nick Burrett, Simon Callan, Peter J. Burwood: various improvements needed for
-    their GCC/GNAT Ada RISC OS ports
+  - Nick Burrett, Simon Callan, Peter J. Burwood: various improvements needed
+    for their GCC/GNAT Ada RISC OS ports
   - Darren Salt: macro support.
   - David Marston: ELF output.
   - Peter Naulls, John-Mark Bell, John Tytgat, Tony van der Hoff,
     Timothy Baldwin, ...
 
--EOF-
+Releases:
 
+- v1.47 :
+  - Part of GCCSDK GCC 4.1.1 Rel 2 release.
+- v2.00 :
+  - Part of GCCSDK GCC 4.1.2 Rel 1.
+  - Assembling happens in two passes.
+  - Hugely improved ObjAsm compatibility : macro's, conditional and repeated
+    directives, include statements, local labels, etc.
+  - Adoption of several new semantics found in ARM Compiler toolchain v5.0
+
+-EOF-
