@@ -1,6 +1,13 @@
+Sat Mar 10 18:44:51 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* regression/tests_pass/align_instr.s: Add.
+	* m_cpuctrl.c (branch_shared): Support branch instructions at currently
+	unaligned area index.
+	* README: Add releases entry.
+
 Sat Mar  3 03:25:17 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
 
-	* regression/tests_pass/misc.s: Move SWP/SWPB tests too...
+	* regression/tests_pass/misc.s: Move SWP/SWPB tests to...
 	* regression/tests_pass/instr_swp.s: ...here.  Enhance test with
 	condition codes and UAL vs pre-UAL syntax.
 	* m_cpumem.c (m_swp): Ignore when in Thumb mode.  Add test on register
